# weekTwo

./: .editorconfig  .git-commit-template  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg  task_1.ipynb
.github/workflows/: pylint.yml  unittests.yml
.streamlit/: config.toml
notebooks/: task_1.ipynb  task_1_.ipynb  task_1_ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb
requirements/: base.txt  local.txt  tests.txt
scripts/: __main__.py  setup_data.py
tests/: scripts_test.py
