[tool.poetry]
name = "<to-be-replace>"
version = "0.1.0"
description = "<to-be-replace>"
authors = ["<to-be-replace>NAME <to-be-replace>EMAIL"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.7.3"
pandas = "2.2.3"
numpy = "2.1.3"
matplotlib = "3.9.3"
seaborn = "0.13.2"
statsmodels = "0.14.4"
scipy = "1.14.1"
streamlit = "1.40.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
	/(
	\.eggs
	| \.git
	| \.hg
	| \.mypy_cache
	| \.tox
	| \.venv
	| _build
	| buck-out
	| build
	| dist
  )/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
